compiler/tests-integration/testData/multiplatform/incorrectImplInClass/output.txt
-- Common --
Exit code: OK
Output:
compiler/tests-integration/testData/multiplatform/incorrectImplInClass/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class Foo
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/tests-integration/testData/multiplatform/incorrectImplInClass/jvm.kt:1:18: error: 'public actual constructor(): Foo' has no corresponding 'expect' declaration
actual class Foo actual constructor() {
                 ^^^^^^^^^^^^^^^^^^^^
compiler/tests-integration/testData/multiplatform/incorrectImplInClass/jvm.kt:2:5: error: 'public actual constructor(s: String): Foo' has no corresponding 'expect' declaration
    actual constructor(s: String) : this()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/tests-integration/testData/multiplatform/incorrectImplInClass/jvm.kt:4:16: error: 'public final actual fun nonPlatformFun(): Unit' has no corresponding 'expect' declaration
    actual fun nonPlatformFun() {}
               ^^^^^^^^^^^^^^
compiler/tests-integration/testData/multiplatform/incorrectImplInClass/jvm.kt:6:16: error: 'public final actual val nonPlatformVal: String' has no corresponding 'expect' declaration
    actual val nonPlatformVal = ""
               ^^^^^^^^^^^^^^
